--- a/style.css
+++ b/style.css
@@ -713,6 +713,9 @@ button>span {
 	clear: both;
 }
 
+#sec5 {
+	background-color: #f8f8f8;
+}
 .sec5_content h2 {
 	margin-bottom: 10px;
 }
@@ -836,6 +839,7 @@ span.info>span.info_description:before {
 	text-align: center;
 	font-size: 20px;
 	color: #303030;
+	background: transparent;
 }
 .sec5_content .calcSlide .input_row .input_wrap .plus {
 	width: 34px;
@@ -950,6 +954,7 @@ span.info>span.info_description:before {
 	margin-right: 30px;
 	text-align: left;
 	padding-left: 20px;
+	background: transparent;
 }
 .sec5_content .slide2 .input_row:nth-child(1) .input_wrap>input:last-child {
 	margin-right: 0;
@@ -2267,7 +2272,7 @@ input:-ms-input-placeholder      {color: #d0d0d0;
 		right: -200px;
 	}
 }
-@media all and (max-width: 900px) {
+@media all and (max-width: 899px) {
 
 	#fullpage {
 		width: 100%;
@@ -2471,6 +2476,84 @@ input:-ms-input-placeholder      {color: #d0d0d0;
 		border:3px solid #fff;
 		box-shadow: 0 0 0 1px #d0d0d0;
 	}
+	.auditory_wrap {
+		flex-direction: column;
+		width: 100%;
+	}
+	.auditory_block {
+		flex-direction: row;
+		width: 100%;
+		padding-left: 150px;
+		position: relative;
+		justify-content: flex-start;
+		text-align: left;
+		height: 100px;
+	}
+	.auditory_block img {
+		position: absolute;
+		top: 0;
+		left: 75px;
+		transform: translateX(-50%);
+		max-width: 120px;
+		height: 85px;
+	}
+	.sec3_content .bottom_part {
+		position: relative;
+	}
+	.sec3_content .bottom_part img {
+		display: none;
+	}
+	.product_placement {
+		margin-bottom: 30px;
+	}
+	.sec3_banner {
+		width: 100%;
+		border-radius: 0px;
+		height: 200px;
+	}
+	.sec3_content .bottom_part {
+		flex-direction: column;
+	}
+	.sec3_content .bottom_part p {
+		margin-right: 0;
+		margin-bottom: 20px;
+		min-width: 340px;
+	}
+	.auditory_block p {
+		margin: 0;
+		width: 100%;
+		font-size: 15px;
+	}
+	#sec4 {
+		padding-bottom: 40px;
+	}
+	#sec4 h2 {
+		margin-bottom: 0;
+	}
+	.sec4_content h2 .gradient_box > span {
+		font-size: 24px;
+	}
+	#sec4 h2 .gradient_box {
+		margin-right: 5px;
+	}
+	.section h3 {
+		font-size: 18px;
+	}
+	.sec4_content {
+		padding: 0;
+	}
+	.adv_block {
+		width: 25%;
+		margin-bottom: 20px;
+	}
+	#sec5 h2 {
+		margin-bottom: 0;
+	}
+	.sec5_content .calcSlide {
+		border-bottom: 1px solid #d0d0d0;
+		padding: 0 15px;
+		padding-bottom: 40px;
+	}
 }
 @media all and (max-width: 768px) {
 	.pillars_block {
@@ -2485,6 +2568,9 @@ input:-ms-input-placeholder      {color: #d0d0d0;
 @media all and (max-width: 520px) {
 	.pillars_block {
 		background-size:100%;
+	}
+	.product_placement {
+		text-align: center;
 	}
 }
 @media all and (max-width: 420px) {
@@ -2508,6 +2594,10 @@ input:-ms-input-placeholder      {color: #d0d0d0;
 @media all and (max-width: 360px) {
 	.pillars_block {
 		background-size:150%;
+	}
+	.sec3_content .bottom_part p {
+		font-size: 12px;
+		min-width: 300px;
 	}
 }
 @media all and (max-width: 340px) {
